--- a/views/demoGD.handlebars
+++ b/views/demoGD.handlebars
@@ -1,3 +1,8 @@
+{{#if (eqString modeColor "light")}}
+  <script>
+    var element= document.body; element.classList.toggle('light');
+  </script>
+{{/if}}
 {{#if (localeIs "sp")}}
   <div style="text-align: left;">
     <a href="http:\\luisfigueredo.ddns.net/"><i class="material-icons">home</i></a>
