--- a/views/titulos.handlebars
+++ b/views/titulos.handlebars
@@ -4,20 +4,20 @@
   </script>
 {{/if}}
 {{#if (localeIs "sp")}}
-<div style="text-align: left;">
-  <a href="http://luisfigueredo.ddns.net/sp"><i
-      class="material-icons"
-    >home</i></a>
-</div>
+  <div style="text-align: left;">
+    <a href="http://luisfigueredo.ddns.net/sp"><i
+        class="material-icons"
+      >home</i></a>
+  </div>
 {{/if}}
 {{#if (localeIs "en")}}
-<div style="text-align: left;">
-  <a href="http://luisfigueredo.ddns.net/en"><i
-      class="material-icons"
-    >home</i></a>
-</div>
+  <div style="text-align: left;">
+    <a href="http://luisfigueredo.ddns.net/en"><i
+        class="material-icons"
+      >home</i></a>
+  </div>
 {{/if}}
-<div class="row">
+<div class="rowTitulo">
   <img width="25%" src="programador.jpg" />
   <img width="25%" src="analista programdor.jpg" />
   <img width="25%" src="analista en sistemas.jpg" />
