--- a/public/style.css
+++ b/public/style.css
@@ -10,9 +10,9 @@ body {
     color: black;
     text-shadow: 1px 1px 2px black, 0 0 25px aliceblue, 0 0 5px black;
     box-shadow: 4px 4px 6px rgba(253, 252, 252, 0.4);
-} 
+}
 
-.light a{
+.light a {
     color: black;
 }
 
@@ -59,15 +59,12 @@ body {
     border-style: solid;
 }
 
-@media screen and (max-width: 768px) {
-    .rowPhone {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
+.rowTitulo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 }
-
 .row {
     display: flex;
     flex-direction: row;
@@ -80,13 +77,21 @@ body {
     flex-direction: row;
     justify-content: space-between;
     border-style: outset;
+    padding-left: 1%;
+    padding-right: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .rowMenu:hover {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border-style: inset;  
+    border-style: inset;
+    padding-left: 1%;
+    padding-right: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .rowFoto {
@@ -98,19 +103,78 @@ body {
     box-shadow: 4px 4px 6px rgb(100 100 100);
 }
 
+.columnMenu {
+    display: none;
+}
+
+.rowWithoutMedia {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.iconMenu {
+    display: none;
+}
+
 @media screen and (max-width: 768px) {
+    .iconMenu {
+        display: block;
+    }
     .row {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
     }
+
+    .columnMenu {
+        display: node;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: left;
+        padding-top: 10%;
+    }
+
+    .rowMenu {
+        display: none;
+        flex-direction: row;
+        justify-content: space-between;
+        border-style: outset;
+        padding-left: 1%;
+        padding-right: 1%;
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+
+    .rowTitulo {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+}
+
+.columnMenuVisible {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: left;
+}
+
+
+.rowPage {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: left;
 }
 
 .logo {
     border-radius: 50%;
     margin-right: 25px;
-    width: 2%;
+    width: 40px;
 }
 
 a {
@@ -118,14 +182,24 @@ a {
     color: aliceblue;
 }
 
-a:hover{
+a:hover {
     cursor: pointer;
     color: red;
 }
 
-.column{
+.column {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;   
+    justify-content: center;
+}
+
+.page {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+p {
+    font-size: 2dvw;
 }
