--- a/public/style.css
+++ b/public/style.css
@@ -118,6 +118,13 @@ body {
     display: none;
 }
 
+.columnMenuVisible {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: left;
+}
+
 @media screen and (max-width: 768px) {
     .iconMenu {
         display: block;
@@ -156,12 +163,17 @@ body {
     }
 }
 
-.columnMenuVisible {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: left;
+@media screen and (min-width: 768px) {
+    .columnMenuVisible {
+        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: left;
+    }
+
 }
+
+
 
 
 .rowPage {
