--- a/views/titulos.handlebars
+++ b/views/titulos.handlebars
@@ -17,8 +17,9 @@
       >home</i></a>
   </div>
 {{/if}}
+<h3 class="rowWithoutMedia">{{__ "analista"}}</h3>
 <div class="rowTitulo">
-  <img width="25%" src="programador.jpg" />
-  <img width="25%" src="analista programdor.jpg" />
-  <img width="25%" src="analista en sistemas.jpg" />
+  <img class="imageTitulo" width="25%" src="programador.jpg" />
+  <img class="imageTitulo" width="25%" src="analista programdor.jpg" />
+  <img class="imageTitulo" width="25%" src="analista en sistemas.jpg" />
 </div>
