--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,5 @@
 <div class="iconMenu">
-<a  onclick="showColorMenu()"><i class="material-icons">menu</i></a>
+  <a onclick="showColorMenu()"><i class="material-icons">menu</i></a>
 </div>
 <div class="rowPage">
   <div id="columnMenu" class="columnMenu">
@@ -15,11 +15,13 @@
       }}
     </a>
     {{#if (eqString modeColor "dark")}}
-          <a onclick="changeColor()"><i class="material-icons">wb_sunny</i></a>
-      {{/if}}
-      {{#if (eqString modeColor "light")}}
-        <a onclick="changeColor()"><span class="material-symbols-outlined">dark_mode</span></a>
-      {{/if}}
+      <a onclick="changeColor()"><i class="material-icons">wb_sunny</i></a>
+    {{/if}}
+    {{#if (eqString modeColor "light")}}
+      <a onclick="changeColor()"><span
+          class="material-symbols-outlined"
+        >dark_mode</span></a>
+    {{/if}}
     {{#if (localeIs "sp")}}
       <div style="text-align: right;">
         <a href="http:\\luisfigueredo.ddns.net/en">English</a>
@@ -46,10 +48,12 @@
         }}
       </a>
       {{#if (eqString modeColor "dark")}}
-          <a onclick="changeColor()"><i class="material-icons">wb_sunny</i></a>
+        <a onclick="changeColor()"><i class="material-icons">wb_sunny</i></a>
       {{/if}}
       {{#if (eqString modeColor "light")}}
-        <a onclick="changeColor()"><span class="material-symbols-outlined">dark_mode</span></a>
+        <a onclick="changeColor()"><span
+            class="material-symbols-outlined"
+          >dark_mode</span></a>
       {{/if}}
       {{#if (localeIs "sp")}}
         <div style="text-align: right;">
@@ -73,10 +77,14 @@
     </div>
     <div class="contacts">
       <div class="rowPhone">
-        <p>{{__ "celular"}}:</p><p>(+598) 98504391</p>
-        <img width="2%" src="WhatsApp.svg" />
-        <p style="padding-left: 20px;">Email:</p>
-        <p>luisalejandrofigueredo@gmail.com</p>
+        <div class="rowPage">
+          <p>{{__ "celular"}}:(+598) 98504391</p>
+          <img style="padding-top: 1%;" width="4%" src="WhatsApp.svg" />
+        </div>
+        <div class="rowPage">
+          <p>Email:</p>
+          <p>luisalejandrofigueredo@gmail.com</p>
+        </div>
       </div>
     </div>
   </div>
@@ -89,18 +97,9 @@
   {{/if}}
   async function changeColor() { const response = await
   fetch("http://luisfigueredo.ddns.net/changeColor"); location.reload(); }
-  function showColorMenu(){
-    if (showMenu===false)
-    {
-      showMenu=true;
-      let element=document.getElementById("columnMenu")
-      element.classList.replace("columnMenu","columnMenuVisible")
-    }
-    else{
-      showMenu=false;
-      let element=document.getElementById("columnMenu")
-      element.classList.replace("columnMenuVisible","columnMenu")
-    }
-
-  }
+  function showColorMenu(){ if (showMenu===false) { showMenu=true; let
+  element=document.getElementById("columnMenu")
+  element.classList.replace("columnMenu","columnMenuVisible") } else{
+  showMenu=false; let element=document.getElementById("columnMenu")
+  element.classList.replace("columnMenuVisible","columnMenu") } }
 </script>
