--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -75,18 +75,16 @@
     <div class="row">
       <p>{{__ "intContact"}}</p>
     </div>
-    <div class="contacts">
       <div class="rowPhone">
-        <div class="rowPage">
+        <div class="rowContacts">
           <p>{{__ "celular"}}:(+598) 98504391</p>
-          <img style="padding-top: 1%;" width="4%" src="WhatsApp.svg" />
+          <object data="WhatsApp.svg" width="30px"></object>
         </div>
-        <div class="rowPage">
-          <p>Email:</p>
-          <p>luisalejandrofigueredo@gmail.com</p>
+        <span style="padding-left:20px;"></span>
+        <div class="rowContacts">
+          <p>Email:luisalejandrofigueredo@gmail.com</p>
         </div>
       </div>
-    </div>
   </div>
 </div>
 
