--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Helvetica Neue';
+    src: url('HelveticaNeue-Regular.otf') format('opentype');
+}
+
 body {
     background-color: black;
     color: aliceblue;
@@ -130,6 +135,23 @@ body {
     flex-direction: row;
     align-content: stretch;
 }
+ .linkTo{
+    display: block;
+    text-align: center;
+ }
+.card{
+    width: 300px;
+    align-content: space-around;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    box-shadow: 4px 4px 6px rgb(100 100 100);
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 
 @media screen and (max-width: 768px) {
     .iconMenu {
