--- a/views/conocimientos.handlebars
+++ b/views/conocimientos.handlebars
@@ -4,49 +4,77 @@
   </script>
 {{/if}}
 {{#if (localeIs "sp")}}
-<div style="text-align: left;">
-  <a href="http://luisfigueredo.ddns.net/sp"><i
-      class="material-icons"
-    >home</i></a>
-</div>
+  <div style="text-align: left;">
+    <a href="http://luisfigueredo.ddns.net/sp"><i
+        class="material-icons"
+      >home</i></a>
+  </div>
 {{/if}}
 {{#if (localeIs "en")}}
-<div style="text-align: left;">
-  <a href="http://luisfigueredo.ddns.net/en"><i
-      class="material-icons"
-    >home</i></a>
-</div>
+  <div style="text-align: left;">
+    <a href="http://luisfigueredo.ddns.net/en"><i
+        class="material-icons"
+      >home</i></a>
+  </div>
 {{/if}}
-<div class="column">
-  <div class="row">
-    <img width="15%" style="padding-right: 1%;" src="Angular.svg" />
-    <img width="15%" style="padding-right: 1%;" src="nodejs.svg" />
+<div class="flex-container">
+  <div class="card">
+    <img width="100%" style="padding-right: 1%;" src="Angular.svg" />
+    <a class="linkTo" href="https://angular.io/">https://angular.io/</a>
+  </div>
+  <div class="card">
+    <img width="100%" style="padding-right: 1%;" src="nodejs.svg" />
+    <a class="linkTo" href="https://nodejs.org/en">https://nodejs.org/en</a>
+  </div>
+  <div class="card">
     <img
-      width="15%"
+      width="100%"
       style="padding-right: 1%;padding-bottom: 2%;"
       src="mysql_official_logo_icon.svg"
     />
+    <a class="linkTo" href="https://www.mysql.com/">https://www.mysql.com/</a>
   </div>
-  <div class="row">
+  <div class="card">
     <img
-      width="10%"
+      width="100%"
       style="padding-right: 1%;"
       src="postgresql_src_logo_icon_170834.svg"
     />
+    <a
+      class="linkTo"
+      href="https://www.postgresql.org/"
+    >https://www.postgresql.org/</a>
+  </div>
+  <div class="card">
     <img
-      width="8%"
+      width="100%"
       style="padding-right: 1%;"
       src="github-icon-seeklogo.com.svg"
     />
+    <a class="linkTo" href="https://github.com/">https://github.com/</a>
+  </div>
+  <div class="card">
     <img
-      width="8%"
-      style="padding-right: 1%;"
+      width="100%"
+      style="padding-top:20% ;padding-right: 1%;"
       src="typescript-logo-1024x576.png"
     />
+    <a class="linkTo" href="https://www.typescriptlang.org/">https://www.typescriptlang.org/</a>
   </div>
-  <div class="row">
-    <img width="8%" style="padding-right: 1%;" src="Linux.png" />
-    <img width="15%" style="padding-right: 1%;" src="typeorm.png" />
-    <img width="8%" style="padding-right: 1%;" src="handlebars_logo.png" />
+  <div class="card">
+    <img width="100%" style="padding-right: 1%;" src="Linux.png" />
+    <a class="linkTo" href="https://www.linux.org/">https://www.linux.org/</a>
+  </div>
+  <div class="card">
+    <img width="100%" style="padding-right: 1%;padding-top:20%" src="typeorm.png" />
+    <a class="linkTo" href="https://typeorm.io/">https://typeorm.io/</a>
+  </div>
+  <div class="card">
+    <img width="100%" style="padding-right: 1%;" src="handlebars_logo.png" />
+    <a class="linkTo" href="https://handlebarsjs.com/">https://handlebarsjs.com/</a>
+  </div>
+  <div class="card">
+    <h1 style="display: block;text-align: center;font-family: 'Helvetica Neue', sans-serif;" >Express</h1>
+    <a class="linkTo" href="https://expressjs.com/">https://expressjs.com/</a>
   </div>
 </div>
