--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,13 +4,13 @@
 <div class="rowPage">
   <div id="columnMenu" class="columnMenu">
     <div style="text-align: left;">
-      <a href="http:\\luisfigueredo.ddns.net/demo">{{__ "demo"}}</a>
+      <a href="https://luisfigueredo.duckdns.org/demo">{{__ "demo"}}</a>
     </div>
-    <a id="conocimiento" href="http://luisfigueredo.ddns.net/conocimientos">{{__
+    <a id="conocimiento" href="https://luisfigueredo.duckdns.org/conocimientos">{{__
         "conocimientos"
       }}
     </a>
-    <a id="titulos" href="http://luisfigueredo.ddns.net/titulos">{{__
+    <a id="titulos" href="https://luisfigueredo.duckdns.org/titulos">{{__
         "titulos"
       }}
     </a>
@@ -24,26 +24,26 @@
     {{/if}}
     {{#if (localeIs "sp")}}
       <div style="text-align: right;">
-        <a href="http:\\luisfigueredo.ddns.net/en">English</a>
+        <a href="https://luisfigueredo.duckdns.org/en">English</a>
       </div>
     {{/if}}
     {{#if (localeIs "en")}}
       <div style="text-align: right;">
-        <a href="http:\\luisfigueredo.ddns.net\sp">Español</a>
+        <a href="https://luisfigueredo.duckdns.org\sp">Español</a>
       </div>
     {{/if}}
   </div>
   <div class="page">
     <div class="rowMenu">
       <div style="text-align: left;">
-        <a href="http:\\luisfigueredo.ddns.net/demo">{{__ "demo"}}</a>
+        <a href="https://luisfigueredo.duckdns.org/demo">{{__ "demo"}}</a>
       </div>
       <a
         id="conocimiento"
-        href="http://luisfigueredo.ddns.net/conocimientos"
+        href="https://luisfigueredo.duckdns.org/conocimientos"
       >{{__ "conocimientos"}}
       </a>
-      <a id="titulos" href="http://luisfigueredo.ddns.net/titulos">{{__
+      <a id="titulos" href="https://luisfigueredo.duckdns.org/titulos">{{__
           "titulos"
         }}
       </a>
@@ -57,12 +57,12 @@
       {{/if}}
       {{#if (localeIs "sp")}}
         <div style="text-align: right;">
-          <a href="http:\\luisfigueredo.ddns.net/en">English</a>
+          <a href="https://luisfigueredo.duckdns.org/en">English</a>
         </div>
       {{/if}}
       {{#if (localeIs "en")}}
         <div style="text-align: right;">
-          <a href="http:\\luisfigueredo.ddns.net\sp">Español</a>
+          <a href="https://luisfigueredo.duckdns.org\sp">Español</a>
         </div>
       {{/if}}
     </div>
@@ -93,7 +93,7 @@
     var element= document.body; element.classList.toggle('light')
   {{/if}}
   async function changeColor() { const response = await
-  fetch("http://luisfigueredo.ddns.net/changeColor"); location.reload(); }
+  fetch("https://luisfigueredo.duckdns.org/changeColor"); location.reload(); }
   function showColorMenu(){ if (showMenu===false) { showMenu=true; let
   element=document.getElementById("columnMenu")
   element.classList.replace("columnMenu","columnMenuVisible") } else{
