--- a/views/conocimientos.handlebars
+++ b/views/conocimientos.handlebars
@@ -5,14 +5,14 @@
 {{/if}}
 {{#if (localeIs "sp")}}
   <div style="text-align: left;">
-    <a href="http://luisfigueredo.duckdns.org/sp"><i
+    <a href="https://luisfigueredo.duckdns.org/sp"><i
         class="material-icons"
       >home</i></a>
   </div>
 {{/if}}
 {{#if (localeIs "en")}}
   <div style="text-align: left;">
-    <a href="http://luisfigueredo.duckdns.org/en"><i
+    <a href="https://luisfigueredo.duckdns.org/en"><i
         class="material-icons"
       >home</i></a>
   </div>
